--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 <title>ChatGPT Prompt Splitter - Split Long Prompts Easily</title>
 <meta name="description" content="Split long ChatGPT prompts into multiple parts for AI processing. Free online tool." />
 <meta name="keywords" content="ChatGPT, prompt splitter, split long prompts, AI tool, multi-part prompt" />
-
+<meta name="google-site-verification" content="g63uD2eX6bMWAqQUkbK3iCGg88YJ3QJgjILNvd1OLgE" />
 <!-- Google AdSense Verification -->
 <meta name="google-site-verification" content="YOUR_VERIFICATION_CODE_HERE" />
 
