--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,14 @@
 <!-- public/index.html -->
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-  <!-- Basic SEO -->
-<title>ChatGPT Prompt Splitter - Split Long Prompts Easily</title>
-<meta name="description" content="Split long ChatGPT prompts into multiple parts for AI processing. Free online tool." />
-<meta name="keywords" content="ChatGPT, prompt splitter, split long prompts, AI tool, multi-part prompt" />
-<meta name="google-site-verification" content="g63uD2eX6bMWAqQUkbK3iCGg88YJ3QJgjILNvd1OLgE" />
-<!-- Google AdSense Verification -->
-<meta name="google-site-verification" content="YOUR_VERIFICATION_CODE_HERE" />
+ <head>
+  <title>Free ChatGPT Prompt Splitter - Split Long Prompts Online</title>
+  <meta name="description" content="Use this free ChatGPT prompt splitter tool to divide long prompts into smaller parts for AI processing. Split multi-part prompts easily online.">
+  <meta name="keywords" content="ChatGPT, prompt splitter, split long prompts, AI tool, multi-part prompt, ChatGPT prompt tool, split prompts online">
+  <meta name="google-site-verification" content="g63uD2eX6bMWAqQUkbK3iCGg88YJ3QJgjILNvd1OLgE">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
 
   <body>
     <div id="root"></div>
